<resources>
    <string name="app_name">bitlabs_project2</string>
    <string name="register">Register</string>
    <string name="email">email</string>
    <string name="password">Password</string>
    <string name="name">name</string>
    <string name="gender">gender</string>
    <string name="Gender">Gender</string>
    <string name="male">male</string>
    <string name="submit">Submit</string>
    <string name="female">female</string>
</resources>
